--- a/web/cadastroCategoria.html
+++ b/web/cadastroCategoria.html
@@ -142,7 +142,7 @@ and open the template in the editor.
             }
             table{
                 background-color: white;
-                width: 90%;
+                width: 80%;
                 position: relative;
                 top:90px;
                 left:60px;
@@ -212,6 +212,22 @@ and open the template in the editor.
                 line-height: 14px;
                 color: black;
             }
+            .carregar1 {
+                position: absolute;
+                left: 88%;
+                top: 185%;
+                width: 100px;
+                height: 25px;
+                background: #F59A9A;
+                border-radius: 10px;
+                font-family: Roboto;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 18px;
+                line-height: 14px;
+                text-align: center;
+                color: #0F27FF;
+            }
 
         </style>
         
@@ -273,7 +289,7 @@ and open the template in the editor.
             </div>
             
             <div id="dados">
-                <input type="button" id="search" value="Carregar" />
+                <input class="carregar1" type="button" id="search" value="Carregar" />
                 <table>
                     <thead>
                     <th>Id</th>
