--- a/web/cadastroCategoria.html
+++ b/web/cadastroCategoria.html
@@ -128,14 +128,17 @@ and open the template in the editor.
             }
             table{
                 background-color: white;
+                border-collapse: collapse;
                 width: 80%;
                 position: relative;
                 top:90px;
                 left:60px;
             }
-            table, tr
-            {
-                border: black solid 1px;   
+            table {
+                border: 1px solid black;
+            }
+            td {
+                text-align: center;
             }
             .lista{
                 display: inline-block;
