--- a/web/cadastroCategoria.html
+++ b/web/cadastroCategoria.html
@@ -264,6 +264,20 @@ and open the template in the editor.
                         }
                     });
                 });
+                function excluir() {
+                $("#excluir").click(function () {
+                   
+                    $.ajax({
+                        type: "DELETE",
+                        url: "http://localhost:8080/Trabalho/Venda/Categoria/excluir/id",
+                        dataType: 'json',
+                        contentType: "application/json; charset=utf-8",
+                        success: function (data, status) {
+                            alert('deletado com sucesso');
+                        }
+                    });
+                });
+            }
             });
         </script>
 
@@ -276,7 +290,7 @@ and open the template in the editor.
                 <input class="text1" type="text" id="id"/>
                 <label class="label3">Descrição</label>
                 <input class="text2" type="text" id="descricao"/>
-                <input id="gravar" class="button1" type="button" value="Salvar" />
+                <input id="salvar" class="button1" type="button" value="Salvar" />
 
             </form>
             <div class="menu">
@@ -314,8 +328,8 @@ and open the template in the editor.
                         text += "<tr>";
                         text += "<td>" + dados[ob].id + "</td>";
                         text += "<td>" + dados[ob].descricao + "</td>";
-                        text += "<td>" + "<a> Alterar </a>" + "</td>";
-                        text += "<td>" + "<a> Excluir </a>" + "</td>";
+                        text += "<td>" + "<a href='#'> Alterar </a>" + "</td>";
+                        text += "<td>" + "<a href='#' onclick='excluir()'> Excluir </a>" + "</td>";
                         text += "</tr>";
                     }
                     document.getElementById("categorias").innerHTML = text;
