--- a/web/consultaProduto.html
+++ b/web/consultaProduto.html
@@ -273,8 +273,8 @@ and open the template in the editor.
                         text += "<td>" + dados[ob].valor + "</td>";
                         text += "<td>" + dados[ob].qtdeEstoque + "</td>";
                         text += "<td>" + dados[ob].categoria_id + "</td>";
-                        text += "<td>" + "<a> Alterar </a>" + "</td>";
-                        text += "<td>" + "<a> Excluir </a>" + "</td>";
+                        text += "<td>" + "<a href='#'> Alterar </a>" + "</td>";
+                        text += "<td>" + "<a href='#'> Excluir </a>" + "</td>";
                         text += "</tr>";
                     }
                     document.getElementById("produtos").innerHTML = text;
