--- a/web/cadastroCategoria.html
+++ b/web/cadastroCategoria.html
@@ -337,7 +337,7 @@ and open the template in the editor.
                         text += "<td>" + dados[ob].id + "</td>";
                         text += "<td>" + dados[ob].descricao + "</td>";
                         text += "<td>" + "<a href='#' onclick='alterar()' class='alterar'> Alterar </a>" + "</td>";
-                        text += "<td>" + "<input id=excluir type='button' value='Excluir'/>" + "</td>";
+                        text += "<td>" + "<a href='#' onclick='excluir()' class='excluir'> Excluir </a>" + "</td>";
                         text += "</tr>";
                     }
                     document.getElementById("categorias").innerHTML = text;
